[gd_scene load_steps=3 format=3 uid="uid://bwp6uq4uewi2b"]

[ext_resource type="Script" uid="uid://cackfohasshwu" path="res://Test/Dialogue/dialogue_trigger.gd" id="1_jg5jd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7lcpa"]
size = Vector2(28, 46)

[node name="DialogueTrigger" type="Node2D"]
script = ExtResource("1_jg5jd")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-8, 12)
shape = SubResource("RectangleShape2D_7lcpa")

[node name="PressE" type="PanelContainer" parent="."]
visible = false
z_index = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -5.0
offset_top = 7.0
offset_right = 68.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.4, 0.4)

[node name="Label" type="Label" parent="PressE"]
layout_mode = 2
text = "按下E互动"

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
